# ai_novel_writer

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  MANIFEST.in  README.md  RESEARCH_APPLIED.md  app.py  pyproject.toml  requirements-train.txt  requirements.txt
.codex/: config.toml
conarrative/: __init__.py  app.py  autodetect.py  cli.py  config.py  corpus.py  datasets.py  db.py  hf_release.py  jobs.py  llm.py  model_refs.py  models.py  orchestrator.py  prompts.py  quickstart.py  retrieval.py  runtime_settings.py  spaces.py  story_pack.py  train_runtime.py  trained_runtime.py  training.py  training_metadata.py  ui_presets.py  utils.py  validators.py  world_model.py
configs/: demo.yaml  local_backend_example.yaml  ollama_gemma4_e2b.yaml  ollama_gemma4_e4b.yaml  ollama_native_qwen3_4b.yaml  ollama_native_qwen3_4b_local_critic.yaml  ollama_native_qwen3_4b_local_critic_world.yaml  ollama_native_qwen3_4b_local_critic_world_strict.yaml  ollama_native_qwen3_4b_pairwise.yaml  ollama_native_qwen3_4b_pairwise_local_critic.yaml  ollama_native_qwen3_4b_pairwise_local_critic_world.yaml  ollama_native_qwen3_4b_pairwise_local_critic_world_strict.yaml  ollama_qwen3_4b.yaml  quickstart_mock.yaml  training_gemma3_4b_it_sft.yaml  training_qwen3_4b_critic_consistency.yaml  training_qwen3_4b_distill.yaml  training_qwen3_4b_dpo.yaml  training_qwen3_4b_sft.yaml  training_qwen3_4b_sft_smoke.yaml  training_qwen3_4b_world_model.yaml
docs/: NARRATIVE_MTP_LEWM_KO.md  TRAINING_KO.md
examples/: scene.yaml  scene1.yaml  scene_smoke.yaml  story.yaml
scripts/: __init__.py  build_mixed_corpus.py  distill_openai_compatible.py  generate_story_pack.py  install_training_deps.ps1  local_role_infer.py  onboard_hf_collaborator.py  one_click_generalist.cmd  (+13 more)
(+85 files in other folders)
