
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conarrative"
version = "0.1.0"
description = "Local-first long-form story generation studio with planning, critics, revision, and narrative world model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.29",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "httpx>=0.27",
]
authors = [{name = "OpenAI"}]

[project.optional-dependencies]
dev = [
  "pytest>=9.0",
]
training = [
  "transformers>=4.51.0",
  "datasets>=2.19.0",
  "peft>=0.11.0",
  "trl>=0.9.0",
  "bitsandbytes>=0.43.0",
  "accelerate>=0.30.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["conarrative*"]
