[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conarrative-studio"
version = "0.2.0"
description = "Local-first scene-based story generation studio with explicit narrative memory and web UI"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "OpenAI", email = "support@openai.com"}
]
dependencies = [
  "fastapi>=0.111,<1",
  "uvicorn>=0.30,<1",
  "pydantic>=2.8,<3",
  "PyYAML>=6,<7",
  "httpx>=0.27,<1",
  "jinja2>=3.1,<4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10"
]

[project.scripts]
conarrative = "conarrative.cli:main"

[tool.setuptools.packages.find]
include = ["conarrative*"]
exclude = ["conarrative.conarrative*"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--ignore=tests/tests --ignore=_zip_import_tmp"
